Sample Tomee Maven Plugin for embedded server